# groupsac

./: .cproject  .project  Paper_References.md  ProjectHome.md
cpp/: CMakeLists.txt
cpp/estimators/: Fundamental7ptSolver.h  Solver.h  lineFittingSolver.h  pointToLineDist.h
cpp/grouping/: groupByFlows.h  testGroupByFlows.cpp
cpp/ransac/: CMakeLists.txt  non_randomness.h  prosac_tools.h  ransac.h  ransacTools.h
cpp/tests/: CMakeLists.txt  mainTestRansac_LineFitting.cpp  testCandidatesProsac.cpp  testFundamental7ptSolver.cpp  testLineFittingSolver.cpp  testRansacRoundsNeeded.cpp  testRobustRansacFundamental7ptSolver.cpp
matlab/: README.txt  fundmat7ptRansac.m  runAllTests.m  testProsacFundmat.m
matlab/estimators/: fundmat7ptError.m  fundmat7ptEvaluator.m  fundmat7ptSolver.m  hommat4ptError.m  hommat4ptSolver.m  lineFittingEvaluator.m  lineFittingSolver.m  pt2LineDist.m  runLineFitting.m  testFundmat7ptError.m  testFundmat7ptRansac.m  testFundmat7ptSolver.m  testLineFitting.m  testLineFittingError.m  testLineFittingEvaluator.m  testRansacLineFitting.m
matlab/interfaces/: testFundmat7ptRansac.m  testGroupsacFundmat.m  testLineFittingRansac.m
matlab/ransac/: calc_cfg_cap_rounds.m  calc_cfg_cup_rounds.m  early_termination.m  early_termination_prosac.m  naive_ransac.m  prosac_termination.m  ransac.m  ransacRoundsNeeded.m
trunk/: .cproject  .project
trunk/cpp/: CMake.helper  CMakeLists.txt
trunk/cpp/estimators/: CMakeLists.txt  Fundamental7ptSolver.h  Solver.h  lineFittingSolver.h  pointToLineDist.h
trunk/cpp/grouping/: groupByFlows.h  testGroupByFlows.cpp
trunk/cpp/ransac/: prosac_tools.h  ransac.h
trunk/cpp/tests/: CMakeLists.txt  mainTestRansac_LineFitting.cpp  testFundamental7ptSolver.cpp  testProsacFundmat.cpp  testRobustRansacFundamental7ptSolver.cpp
trunk/matlab/: lineFittingRansac.m  runAllTests.m  set_path.m
trunk/matlab/estimators/: LineToPointFitting.m  fundmat7ptEvaluator.m  hommat4ptEvaluator.m  lineFitting.m  lineFittingError.m  lineFittingEvaluator.m  ransacLineFitting.m  runLineFitting.m  testFundmat7ptError.m  testFundmat7ptEvaluator.m  testFundmat7ptSolver.m  testLineFitting.m  testLineFittingSolver.m  testPt2LineDist.m
trunk/matlab/grouping/: groupByFlows.m  testGroupByFlows.m
trunk/matlab/interfaces/: fundmat7ptRansac.m  testGroupsacFundmat.m  testProsacFundmat.m
trunk/matlab/ransac/: build_grp_cfgs.m  candidatesProsac.m  candidates_fixed_groups.m  candidates_multiple_groups.m  candidates_prosac.m  candidates_single_group.m  check_ground_truth.m  comb_group_counts.m  draw_samples.m  early_termination.m  early_termination_prosac.m  group_ransac.m  group_ransac_termination.m  non_randomness.m  prosacSample.m  prosac_sample.m  prosac_termination.m  ransac.m  ransacThreshold.m  ransac_rounds_needed.m  testCandidatesProsac.m  testProsacSample.m  testRansacRoundsNeeded.m
wiki/: Paper_References.wiki
