#
# (C) 2010 Groupsac

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(GROUPSAC_MAJOR 0)
SET(GROUPSAC_MINOR 1)
SET(GROUPSAC_PATCH 0)

MESSAGE(STATUS "Configuring Groupsac ${GROUPSAC_MAJOR}.${GROUPSAC_MINOR}.${GROUPSAC_PATCH}")

PROJECT(groupsac C CXX)

INCLUDE_DIRECTORIES(
  .
  estimators
  ransac
  thirdParty
)
ADD_SUBDIRECTORY(thirdParty)
ADD_SUBDIRECTORY(estimators)
ADD_SUBDIRECTORY(ransac)
ADD_SUBDIRECTORY(tests)

